<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/profile_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/course_list_fragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/label_course" />
        <item
            android:id="@+id/manage_user_fragment"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/label_manage_user" />
        <item
            android:id="@+id/myDiscussionsFragment"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="@string/label_my_discussion" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/label_logout" />

    </group>
</menu>