<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ManageChapterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_chapter_no_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/label_chapter_no"
                app:layout_constraintEnd_toStartOf="@+id/tv_chapter_sub_no_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_chapter_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_chapter_sub_no_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/label_chapter_sub_no"
                app:helperText="@string/label_optional"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_chapter_no_layout"
                app:layout_constraintTop_toTopOf="@+id/tv_chapter_no_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_chapter_sub_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_chapter_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/label_chapter_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_chapter_sub_no_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_chapter_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:text="@string/label_cancel"
                app:layout_constraintEnd_toStartOf="@+id/btn_ok"
                app:layout_constraintStart_toStartOf="@+id/tv_chapter_name_layout"
                app:layout_constraintTop_toBottomOf="@+id/tv_chapter_name_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/label_create"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="@id/tv_chapter_name_layout"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
