<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_edit_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_enter_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_edit_message"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_message_layout"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_message_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:text="@string/label_cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@id/tv_edit_message_layout"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/label_save" />
</androidx.constraintlayout.widget.ConstraintLayout>